exports[`use various parts of svg-edit > check tool_source #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
    ></rect>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_fhpath #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      style="pointer-events:inherit"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_text #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#000000"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
    >
      AB
    </text>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_italic #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#000000"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      font-=""
    >
      AB
    </text>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_bold #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#000000"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      font-=""
      font-weight="bold"
    >
      AB
    </text>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check change color #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#ffff00"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      font-=""
      font-weight="bold"
    >
      AB
    </text>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_text_anchor_start #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#ffff00"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="start"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      font-=""
      font-weight="bold"
    >
      AB
    </text>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_text_anchor_middle #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#ffff00"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      font-=""
      font-weight="bold"
    >
      AB
    </text>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_text_anchor_end #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#ffff00"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="end"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      font-=""
      font-weight="bold"
    >
      AB
    </text>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_star #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#ffff00"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="end"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      font-=""
      font-weight="bold"
    >
      AB
    </text>
    <polygon
      cx="670"
      cy="202"
      id="svg_2"
      shape="star"
      point="5"
      r="13.333333333333334"
      radialshift=""
      r2="5.333333333333334"
      orient="point"
      fill="#ffff00"
      strokecolor="#000000"
      strokewidth="0"
      points="670,188.66666666666666 673.1348546788931,197.68524269666693 682.680753550602,197.87977340833405 675.0723014202408,203.64809063666638 677.837136697233,212.78689325833264 670,207.33333333333334 662.162863302767,212.78689325833264 664.9276985797592,203.64809063666638 657.319246449398,197.87977340833405 666.8651453211069,197.68524269666693 670,188.66666666666666 673.1348546788931,197.68524269666693 "
      stroke="#000000"
      stroke-width="0"
    >
      <animate
        attributeName="opacity"
        begin="indefinite"
        dur="0.2"
        fill="freeze"
        to="1"
      ></animate>
    </polygon>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_polygon #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#ffff00"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="end"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      font-=""
      font-weight="bold"
    >
      AB
    </text>
    <polygon
      cx="670"
      cy="202"
      id="svg_2"
      shape="star"
      point="5"
      r="13.333333333333334"
      radialshift=""
      r2="5.333333333333334"
      orient="point"
      fill="#ffff00"
      strokecolor="#000000"
      strokewidth="0"
      points="670,188.66666666666666 673.1348546788931,197.68524269666693 682.680753550602,197.87977340833405 675.0723014202408,203.64809063666638 677.837136697233,212.78689325833264 670,207.33333333333334 662.162863302767,212.78689325833264 664.9276985797592,203.64809063666638 657.319246449398,197.87977340833405 666.8651453211069,197.68524269666693 670,188.66666666666666 673.1348546788931,197.68524269666693 "
      stroke="#000000"
      stroke-width="0"
      fill-opacity="1"
      stroke-opacity="1"
    ></polygon>
    <polygon
      cx="720"
      cy="252"
      id="svg_3"
      shape="regularPoly"
      sides="5"
      orient="x"
      edge="6.666666666666667"
      fill="#ffff00"
      strokecolor="#000000"
      strokewidth="5"
      points="725.6710053890135,252 721.7524370403971,257.3934466291663 715.4120602650961,255.33333333333334 715.4120602650961,248.66666666666666 721.7524370403971,246.6065533708337 725.6710053890135,252 "
      stroke="#000000"
      stroke-width="5"
    >
      <animate
        attributeName="opacity"
        begin="indefinite"
        dur="0.2"
        fill="freeze"
        to="1"
      ></animate>
    </polygon>
  </g>
</svg>
`;
